--- a/index.html
+++ b/index.html
@@ -167,6 +167,16 @@
       <br />
       <a href="https://www.roblox.com/games/70726638079417/Untitled-Game" target="_blank" rel="noopener noreferrer" class="button">▶️ Play Game</a>
     </section>
+
+    <section class="project">
+      <h2>✨ Modular Ability System</h2>
+      <p>A plug-and-play framework that lets developers attach, upgrade, and swap
+         player abilities (dashes, shields, AoE attacks, etc.) with minimal code.</p>
+      <a href="https://streamable.com/bmnyav" target="_blank" rel="noopener noreferrer" class="button">▶️ Watch Video</a>
+      <br />
+      <a href="https://www.roblox.com/games/74506831328497/Modular-Ability-System"target="_blank" rel="noopener noreferrer" class="button">▶️ Play Game</a>
+    </section>
+
   </main>
 
   <section id="contact">
