--- a/index.html
+++ b/index.html
@@ -177,6 +177,16 @@
       <a href="https://www.roblox.com/games/74506831328497/Modular-Ability-System"target="_blank" rel="noopener noreferrer" class="button">▶️ Play Game</a>
     </section>
 
+    <section class="project">
+      <h2>🧠 Smart AI System</h2>
+      <p>An adaptive NPC AI framework featuring path finding, threat assessment,
+         and state driven behaviors that scale from simple guards to boss fights.</p>
+      <a href="https://streamable.com/zc98bn" target="_blank"
+         rel="noopener noreferrer" class="button">▶️ Watch Video</a>
+         <br />
+      <a href="https://www.roblox.com/games/116313404150733/Smart-AI-System"target="_blank" rel="noopener noreferrer" class="button">▶️ Play Game</a>
+    </section>
+
   </main>
 
   <section id="contact">
