--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- HTML5 doctype declaration -->
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Destroyedvision - Scripting Portfolio</title>
+
+  <!-- Embedded CSS for styling the entire webpage -->
   <style>
+    /* General page styling */
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -16,11 +19,15 @@
       align-items: center;
       padding: 20px;
     }
+
+    /* Header styling */
     header {
       text-align: center;
       margin-bottom: 40px;
       user-select: none;
     }
+
+    /* Title styles */
     header h1 {
       font-size: 3rem;
       font-weight: 900;
@@ -28,6 +35,8 @@
       text-shadow: 0 0 8px #00bb66, 0 0 20px #007744;
       margin: 0;
     }
+
+    /* Subtitle styling */
     header p {
       font-size: 1.1rem;
       margin-top: 10px;
@@ -36,10 +45,14 @@
       font-weight: 600;
       font-style: italic;
     }
+
+    /* Container for all project sections */
     main {
       max-width: 900px;
       width: 100%;
     }
+
+    /* Individual project card styles */
     section.project {
       background: #1d1d1d;
       border-radius: 12px;
@@ -48,15 +61,18 @@
       box-shadow: 0 0 10px #00442299;
       transition: box-shadow 0.3s ease;
     }
+
     section.project:hover {
       box-shadow: 0 0 18px #007744cc;
     }
+
     section.project h2 {
       margin-top: 0;
       color: #00bb66;
       font-weight: 700;
       font-size: 1.8rem;
     }
+
     section.project p {
       font-size: 1rem;
       margin-bottom: 15px;
@@ -64,6 +80,7 @@
       line-height: 1.4;
     }
 
+    /* Button styles */
     .button {
       display: inline-block;
       background: #004d29;
@@ -78,12 +95,14 @@
       user-select: none;
       margin-top: 8px;
     }
+
     .button:hover {
       background: #006636;
       box-shadow: 0 8px 25px #005522cc;
       color: #d0f0d6;
     }
 
+    /* Contact section at bottom */
     #contact {
       margin-top: 40px;
       text-align: center;
@@ -96,15 +115,18 @@
       color: #00bb66;
       user-select: none;
     }
+
     #contact a {
       color: #00bb66;
       text-decoration: underline;
       font-weight: 800;
     }
+
     #contact a:hover {
       color: #007744;
     }
 
+    /* Footer styles */
     footer {
       margin-top: 50px;
       text-align: center;
@@ -113,13 +135,17 @@
     }
   </style>
 </head>
+
 <body>
+  <!-- Header section with title and subtitle -->
   <header>
     <h1>Destroyedvision</h1>
     <p>Roblox Scripter | Game Systems Developer | Portfolio</p>
   </header>
 
+  <!-- Main content holding all the project sections -->
   <main>
+    <!-- Each section below represents a single scripting project -->
     <section class="project">
       <h2>🏗️ Realistic Building/Editing System</h2>
       <p>A modular system for building and editing structures with smooth UI and performance.</p>
@@ -186,13 +212,14 @@
          <br />
       <a href="https://www.roblox.com/games/116313404150733/Smart-AI-System"target="_blank" rel="noopener noreferrer" class="button">▶️ Play Game</a>
     </section>
-
   </main>
 
+  <!-- Contact information -->
   <section id="contact">
     📬 Contact me: <a href="mailto:zmaspect@gmail.com">zmaspect@gmail.com</a>
   </section>
 
+  <!-- Footer copyright -->
   <footer>
     &copy; 2025 Destroyedvision. All rights reserved.
   </footer>
